# libcellml-archived

./: .gitignore  .project  .travis.yml  CMakeLists.txt  README.md  doxy.config  model.notation  model.uml
.travis_scripts/: boost-linux.sh  cmake.sh
cmake/: common.cmake
docs/: conf.py  glossary.rst  index.rst  usecases.rst
docs/developmentProcess/: index.rst  libcellml-development-contribution.rst  libcellml-development-setup.rst
docs/source/: Introducing the libCellML project.rst  conf.py  devProcess.rst  index.rst  objectModel.rst  projectIntro.rst  usecases.rst
src/: CMakeLists.txt  Cellml_1_2.cpp  Cellml_1_2.h  Cellml_1_2.xsd  Component.cpp  Component.h  Doxyfile  LibcellmlConfig.h.in  Manager.cpp  Manager.h  Model.cpp  Model.h  Parent.h  Serialiser.cpp  Serialiser.h  Test.cpp  Unit.cpp  Unit.h  Units.cpp  Units.h  UnitsOwner.cpp  UnitsOwner.h  Variable.cpp  Variable.h  Version.cpp  Version.h  XmlSerialisation.cpp  XmlSerialisation.h  cellml_1_2.cpp  cellml_1_2.cxx  cellml_1_2.h  cellml_1_2.hxx  cellml_1_2.xsd  generate.sh  libcellml_config.h.in  model.cpp  version.cpp  version.h  xml_serialisation.cpp  xsd-options.txt
src/api/libcellml/: Component.h  UnitsOwner.h  Variable.h  model.h  version.h  xml_serialisation.h
src/misc/: RationaliseGroupedManyToMany.hs
tests/: CMakeLists.txt  ComponentTest.cpp  ManagerTest.cpp  ModelTest.cpp  SerialiserTest.cpp  UnitTest.cpp  UnitsTest.cpp  VariableTest.cpp  VersionTest.cpp  XmlBindingsSerialisationTest.cpp  XmlSerialisationTest.cpp  model_test.cpp  version_test.cpp  xml_serialisation_test.cpp
tests/gtest-1.7.0/: CMakeLists.txt
utils/: generate.sh
